tests/miz/fail/types/fail_type_elaboration_imported_attribute_gap_001.miz
import parser.type_fixtures;
reserve a for TypeCaseAttr set;
